Address Sonar findings and make admin console paths configurable.
Build redirects and template links from etheric.admin.console-path, apply Lombok where safe, and document Windows k6 load-test steps in the integration guide.